--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kevin's Resume</title>
 </head>
 <body>
-    <img src="./_DSC2658.jpg" height="100"/>
+    <img src="./kevs.jpg" height="100"/>
     <h1>Kevin Dedja</h1>
     <h2>Software Quality Assurance Tester</h2>
     <h3>
